wrap menu responsive fix

--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,7 @@ img {
   background: url('../images/logo-bg.svg') no-repeat;
   background-size: 300px;
   min-height: 215px;
+  margin-bottom: 10px;
 }
 .logo a{
   padding-left: 30px;
@@ -172,7 +173,7 @@ img {
 .navbar{
   padding: 0;
   align-items: flex-start;
-  margin-bottom: 50px;
+  margin-bottom: 80px;
 }
 #mobile-bars {
   color: #fff;
@@ -905,8 +906,8 @@ img {
     padding-bottom: 0;
   }
   .wrap_menu{
-    margin-top: 20px;
-    margin-bottom: 40px;
+    /* margin-top: 20px; */
+    /* margin-bottom: 40px; */
   }
   .main-menu {
     width: 90%;
@@ -1001,6 +1002,7 @@ img {
     background-size: 250px;
     max-width: 250px;
     min-height: 200px;
+    margin-bottom: 0;
   }
   .logo a {
     padding-left: 25px;
